--- a/src/views/Field/Field.module.css
+++ b/src/views/Field/Field.module.css
@@ -1,42 +1,42 @@
 .wrapper {
-  --border: solid 1px black;
+    --border: solid 1px black;
 
-  display: grid;
-  grid-template-columns: repeat(var(--size-x), 1fr);
-  border-left: var(--border);
-  border-bottom: var(--border);
+    display: grid;
+    grid-template-columns: repeat(var(--size-x), 1fr);
+    border-left: var(--border);
+    border-bottom: var(--border);
 }
 
 .cell {
-  width: 2rem;
-  height: 2rem;
-  border-right: var(--border);
-  border-top: var(--border);
+    width: 2rem;
+    height: 2rem;
+    border-right: var(--border);
+    border-top: var(--border);
 
-  &:hover,
-  &:focus-visible {
-    background: gray;
-  }
+    &:hover,
+    &:focus-visible {
+        background: gray;
+    }
 }
 
 .hit {
-  position: relative;
-  pointer-events: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: relative;
+    pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  &:before {
-    content: "";
-    display: block;
-    width: 90%;
-    height: 90%;
-    background: red;
-    border-radius: 50%;
-  }
+    &:before {
+        content: '';
+        display: block;
+        width: 90%;
+        height: 90%;
+        background: red;
+        border-radius: 50%;
+    }
 }
 
 .show {
-  background: black;
-  pointer-events: none;
+    background: black;
+    pointer-events: none;
 }
