--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     display: flex;
+    flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
     min-width: 320px;
